# oiram-editor

./: .gitignore  .travis.yml  appveyor.yml  readme.md
.github/workflows/: build.linux.workflow.yml  build.mac.workflow.yml  build.windows.workflow.yml
scripts/: appveyor_helper.py
src/: CMakeLists.txt  CMakePresets.json  OiramLevelEditor.pro  element.cpp  element.h  level.c  level.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  tile.cpp  tile.h  tilemapview.cpp  tilemapview.h  tileview.cpp  tileview.h  utils.cpp  utils.h  vcpkg.json
src/resources/: icon.icns
src/resources/os/mac/: icon.icns
src/resources/os/windows/: oiram-editor.rc
